Edited HTML templates

--- a/vtbhackCognitio/templates/index/document.html
+++ b/vtbhackCognitio/templates/index/document.html
@@ -38,22 +38,16 @@
 									<div class="form-group">
 										<label>Чатик</label>
 										<div id="textarea" class="card">
-											<div class="container pt-1">
+											<div class="container pt-1" id="chat">
 												<div class="row">
-													<div class="col-3">
-														<div id="name">
+													<div class="col-3 name">
 															Кирилл
-														</div>
 													</div>
-													<div class="col-5">
-														<div id="comment">
+													<div class="col-5 comment">
 															Гавно не тонет
-														</div>
 													</div>
-													<div class="col-4">
-														<div id="date">
+													<div class="col-4 date">
 															14.06.2019
-														</div>
 													</div>
 												</div>
 											</div>
