--- a/vtbhackCognitio/templates/index/registration.html
+++ b/vtbhackCognitio/templates/index/registration.html
@@ -11,7 +11,7 @@
 					</span>
 					<div class="wrap-input  padding">
 						<span class="label-input"><b>Эл.почта</b></span>
-						<input class="input" type="text" name="Email" placeholder="Введите адрес электронной почты">
+						<input class="input" type="email" name="Email" placeholder="Введите адрес электронной почты">
 						<span class="focus-input" data-symbol="&#xf200;"></span>
 					</div>
 					<div class="wrap-input  padding">
@@ -28,7 +28,7 @@
 						<div class="wrap-login-form-btn">
 							<div class="login-form-bgbtn"></div>
 							<button class="login-form-btn">
-								зарегистрироваться
+								Зарегистрироваться
 							</button>
 						</div>
 					</div>
