--- a/vtbhackCognitio/templates/index/auth.html
+++ b/vtbhackCognitio/templates/index/auth.html
@@ -11,12 +11,12 @@
 					</span>
 					<div class="wrap-input  padding">
 						<span class="label-input"><b>Эл.почта или Логин</b></span>
-						<input class="input" type="text" name="Email" placeholder="Введите адрес электронной почты">
+						<input class="input" type="email" name="Email" placeholder="Введите адрес электронной почты">
 						<span class="focus-input" data-symbol="&#xf206;"></span>
 					</div>
 					<div class="wrap-input  padding">
 						<span class="label-input"><b>Пароль</b></span>
-						<input class="input" type="password" name="password" placeholder="Введите пароль">
+						<input class="input" type="password" id="pss" name="password" placeholder="Введите пароль">
 						<span class="focus-input" data-symbol="&#xf190;"></span>
 					</div>
 					<div class="container-login-form-btn padding">
