--- a/vtbhackCognitio/templates/index/document.html
+++ b/vtbhackCognitio/templates/index/document.html
@@ -31,6 +31,22 @@
 										<button class="btn btn-success">За</button>
 										<button class="btn btn-danger">Против</button>
 									</div>
+									{% for r in results %}
+									<div class="d-flex flex-row">
+											<div>
+	
+												<p class="">{% r.user.first_name r.user.last_name %}</p>
+											</div>
+											<div>
+												{% if r.result == 1 %}
+												<p class="text-success">За</p>
+												{% else if r.result == 0 %}
+												<p class="text-danger">Против</p>
+												{% else %}
+												<p class="text-warning">Не проголосовал</p>
+												{% endif %}
+											</div>
+										</div>
 								</div>
 							</div>
 							<div class="col-sm-12">
